--- a/web/sites/zipang-casino/config/sync/core.entity_view_display.taxonomy_term.all_games_category.default.yml
+++ b/web/sites/zipang-casino/config/sync/core.entity_view_display.taxonomy_term.all_games_category.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.taxonomy_term.all_games_category.field_category_icon
+    - field.field.taxonomy_term.all_games_category.field_category_url
     - field.field.taxonomy_term.all_games_category.field_icon
     - field.field.taxonomy_term.all_games_category.field_log_in_state
     - field.field.taxonomy_term.all_games_category.field_number_of_rows
@@ -11,6 +12,7 @@ dependencies:
     - field.field.taxonomy_term.all_games_category.field_thumbnail_size
     - taxonomy.vocabulary.all_games_category
   module:
+    - link
     - options
     - svg_image
     - text
@@ -38,6 +40,18 @@ content:
       image_link: ''
     third_party_settings: {  }
     type: image
+    region: content
+  field_category_url:
+    weight: 7
+    label: above
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
+    third_party_settings: {  }
+    type: link
     region: content
   field_icon:
     weight: 1
