--- a/web/sites/zipang-casino/config/sync/views.view.all_games_categories.yml
+++ b/web/sites/zipang-casino/config/sync/views.view.all_games_categories.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.taxonomy_term.field_category_icon
+    - field.storage.taxonomy_term.field_category_url
     - field.storage.taxonomy_term.field_icon
     - field.storage.taxonomy_term.field_log_in_state
     - field.storage.taxonomy_term.field_number_of_rows
@@ -11,6 +12,7 @@ dependencies:
     - field.storage.taxonomy_term.field_thumbnail_size
     - taxonomy.vocabulary.all_games_category
   module:
+    - link
     - options
     - rest
     - rest_views
@@ -541,6 +543,73 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
+        field_category_url:
+          id: field_category_url
+          table: taxonomy_term__field_category_url
+          field: field_category_url
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: uri
+          type: link
+          settings:
+            trim_length: null
+            url_only: true
+            url_plain: true
+            rel: '0'
+            target: '0'
+          group_column: ''
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
       filters:
         vid:
           id: vid
@@ -653,6 +722,7 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.taxonomy_term.field_category_icon'
+        - 'config:field.storage.taxonomy_term.field_category_url'
         - 'config:field.storage.taxonomy_term.field_icon'
         - 'config:field.storage.taxonomy_term.field_log_in_state'
         - 'config:field.storage.taxonomy_term.field_number_of_rows'
@@ -689,6 +759,21 @@ display:
             field_icon:
               alias: icon
               raw_output: false
+            field_slug:
+              alias: ''
+              raw_output: false
+            field_category_icon:
+              alias: ''
+              raw_output: false
+            field_log_in_state:
+              alias: ''
+              raw_output: false
+            field_number_of_rows:
+              alias: ''
+              raw_output: false
+            field_thumbnail_size:
+              alias: ''
+              raw_output: false
     cache_metadata:
       max-age: -1
       contexts:
@@ -698,6 +783,7 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.taxonomy_term.field_category_icon'
+        - 'config:field.storage.taxonomy_term.field_category_url'
         - 'config:field.storage.taxonomy_term.field_icon'
         - 'config:field.storage.taxonomy_term.field_log_in_state'
         - 'config:field.storage.taxonomy_term.field_number_of_rows'
