--- a/web/sites/zipang-casino/config/sync/views.view.game_list_v4.yml
+++ b/web/sites/zipang-casino/config/sync/views.view.game_list_v4.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.storage.zipang_desktop_games_entity.field_all_games_category
     - field.storage.zipang_desktop_games_entity.field_arcade_game_category
     - field.storage.zipang_desktop_games_entity.field_arcade_game_filter
+    - field.storage.zipang_desktop_games_entity.field_bet_range
     - field.storage.zipang_desktop_games_entity.field_client_type
     - field.storage.zipang_desktop_games_entity.field_client_type_mobile
     - field.storage.zipang_desktop_games_entity.field_enable_free_play
@@ -26,6 +27,7 @@ dependencies:
     - field.storage.zipang_desktop_games_entity.field_game_title_icon
     - field.storage.zipang_desktop_games_entity.field_game_type
     - field.storage.zipang_desktop_games_entity.field_provider_product
+    - field.storage.zipang_desktop_games_entity.field_rtp
     - taxonomy.vocabulary.all_games_category
     - taxonomy.vocabulary.arcade_game_category
     - taxonomy.vocabulary.desktop_game_category
@@ -2796,6 +2798,132 @@ display:
           delta_first_last: false
           field_api_classes: 0
           plugin_id: field_export
+        field_rtp:
+          id: field_rtp
+          table: zipang_desktop_games_entity__field_rtp
+          field: field_rtp
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
+        field_bet_range:
+          id: field_bet_range
+          table: zipang_desktop_games_entity__field_bet_range
+          field: field_bet_range
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
     cache_metadata:
       max-age: -1
       contexts:
@@ -2807,6 +2935,7 @@ display:
         - user
       tags:
         - 'config:field.storage.zipang_desktop_games_entity.field_all_games_category'
+        - 'config:field.storage.zipang_desktop_games_entity.field_bet_range'
         - 'config:field.storage.zipang_desktop_games_entity.field_client_type'
         - 'config:field.storage.zipang_desktop_games_entity.field_client_type_mobile'
         - 'config:field.storage.zipang_desktop_games_entity.field_external_game_id'
@@ -2816,6 +2945,7 @@ display:
         - 'config:field.storage.zipang_desktop_games_entity.field_game_tag'
         - 'config:field.storage.zipang_desktop_games_entity.field_game_thumbnail'
         - 'config:field.storage.zipang_desktop_games_entity.field_game_title'
+        - 'config:field.storage.zipang_desktop_games_entity.field_rtp'
   rest_export_2:
     display_plugin: rest_export
     id: rest_export_2
