PACIFIC-1487-revised-password-alert-functionality-config

--- a/web/sites/mobile-msw/config/sync/webcomposer_form_manager.form.forgot_password_form.footer_markup.yml
+++ b/web/sites/mobile-msw/config/sync/webcomposer_form_manager.form.forgot_password_form.footer_markup.yml
@@ -1,9 +1,8 @@
 field_settings:
-  label: 'Confirm Password'
-  placeholder: 'Confirm password label'
+  markup: "<p><img alt=\"invalid-black.svg\" data-entity-type=\"\" data-entity-uuid=\"\" height=\"78\" src=\"/images/svg/invalid-white.svg\" width=\"78\" /></p>\r\n\r\n<p style=\"margin-left:10px;\">For any question or concerns please contact <a href=\"#\">Customer Support</a>.</p>\r\n"
 field_validations:
   required:
-    enable: 1
+    enable: 0
     error_message: 'Field should be required'
     rule_description: ''
     weight: '0'
@@ -20,7 +19,7 @@ field_validations:
     rule_description: ''
     weight: '0'
     parameters:
-      spaces: 0
+      spaces: 1
   alpha_multi:
     enable: 0
     error_message: 'Value is not a valid multilingual character'
@@ -53,12 +52,12 @@ field_validations:
     rule_description: ''
     weight: '0'
   min_length:
-    enable: 1
+    enable: 0
     error_message: 'Minimum requirement not met'
     rule_description: ''
     weight: '0'
     parameters:
-      length: '6'
+      length: '2'
   max_length:
     enable: 0
     error_message: 'Maximum requirement not met'
@@ -85,6 +84,25 @@ field_validations:
     weight: '0'
     parameters:
       not_match: ''
+  invalid_words:
+    enable: 0
+    error_message: 'Invalid/not allowed characters'
+    rule_description: ''
+    weight: '0'
+    parameters:
+      invalid_words_list: ''
+  valid_languages:
+    enable: 0
+    error_message: 'This field only accepts specific characters.'
+    rule_description: ''
+    weight: '0'
+    parameters:
+      regex_value: ''
+  match_password:
+    enable: 0
+    error_message: 'Password not match'
+    rule_description: ''
+    weight: '0'
   email_availability:
     enable: 0
     error_message: 'Email not available'
@@ -98,11 +116,6 @@ field_validations:
   duplicated_security_question:
     enable: 0
     error_message: 'Security Questions should not be the same'
-    rule_description: ''
-    weight: '0'
-  match_password:
-    enable: 1
-    error_message: 'Password not match'
     rule_description: ''
     weight: '0'
   valid_username_prefix:
