PACIFIC-1453 sync yml files

--- a/web/sites/zipang-casino/config/sync/core.entity_form_display.taxonomy_term.all_games_category.default.yml
+++ b/web/sites/zipang-casino/config/sync/core.entity_form_display.taxonomy_term.all_games_category.default.yml
@@ -15,7 +15,6 @@ dependencies:
   module:
     - field_group
     - link
-    - path
     - svg_image
     - text
 third_party_settings:
@@ -68,20 +67,12 @@ content:
     type: image_image
     region: content
   field_category_url:
-    weight: 13
+    weight: 7
     settings:
       placeholder_url: ''
       placeholder_title: ''
     third_party_settings: {  }
     type: link_default
-    region: content
-  field_icon:
-    weight: 8
-    settings:
-      progress_indicator: throbber
-      preview_image_style: thumbnail
-    third_party_settings: {  }
-    type: image_image
     region: content
   field_log_in_state:
     weight: 4
@@ -124,15 +115,11 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  path:
-    type: path
-    weight: 7
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   translation:
     weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  field_icon: true
+  path: true
