--- a/web/sites/zipang-casino/config/sync/core.entity_view_display.taxonomy_term.all_games_category.default.yml
+++ b/web/sites/zipang-casino/config/sync/core.entity_view_display.taxonomy_term.all_games_category.default.yml
@@ -29,7 +29,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_category_icon:
-    weight: 2
+    weight: 1
     label: above
     settings:
       svg_attributes:
@@ -42,42 +42,33 @@ content:
     type: image
     region: content
   field_category_url:
-    weight: 7
+    weight: 6
     label: above
     settings:
       trim_length: 80
-      url_only: false
-      url_plain: false
-      rel: ''
-      target: ''
+      url_only: true
+      url_plain: true
+      rel: '0'
+      target: '0'
     third_party_settings: {  }
     type: link
     region: content
-  field_icon:
-    weight: 1
-    label: above
-    settings:
-      image_style: ''
-      image_link: ''
-    third_party_settings: {  }
-    type: image
-    region: content
   field_log_in_state:
-    weight: 3
+    weight: 2
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
   field_number_of_rows:
-    weight: 6
+    weight: 5
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
   field_slug:
-    weight: 4
+    weight: 3
     label: above
     settings:
       link_to_entity: false
@@ -85,11 +76,12 @@ content:
     type: string
     region: content
   field_thumbnail_size:
-    weight: 5
+    weight: 4
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
 hidden:
+  field_icon: true
   langcode: true
