--- a/web/sites/entrypage/config/sync/language.entity.ru.yml
+++ b/web/sites/entrypage/config/sync/language.entity.ru.yml
@@ -6,11 +6,11 @@ dependencies:
     - webcomposer_language_hierarchy
 third_party_settings:
   webcomposer_language_hierarchy:
-    webcomposer_fallback_langcode: ''
+    webcomposer_fallback_langcode: en
     webcomposer_language_custom_label: 'Russian (Kazakhstan)'
     webcomposer_language_hidden: 0
 id: ru
-label: Russian
+label: 'Russian (Kazakhstan)'
 direction: ltr
 weight: 14
 locked: false
