WEBSITE-5882 Kazakh-Russian-Languages updated label

--- a/web/sites/faqs/config/sync/language.entity.ru.yml
+++ b/web/sites/faqs/config/sync/language.entity.ru.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies: {  }
 id: ru
-label: Russian
+label: 'Russian (Kazakhstan)'
 direction: ltr
 weight: 17
 locked: false
