--- a/web/sites/mobile-arcade/config/sync/language.entity.ru.yml
+++ b/web/sites/mobile-arcade/config/sync/language.entity.ru.yml
@@ -1,9 +1,15 @@
 uuid: ed63bd29-27b1-481f-b526-ca7f3e9e4fc1
-langcode: en
+langcode: ru
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - webcomposer_language_hierarchy
+third_party_settings:
+  webcomposer_language_hierarchy:
+    webcomposer_fallback_langcode: en
+    webcomposer_language_hidden: 0
 id: ru
-label: Russian
+label: 'Russian (Kazakhstan)'
 direction: ltr
 weight: 8
 locked: false
