--- a/web/sites/mobile-casino/config/sync/language.entity.ru.yml
+++ b/web/sites/mobile-casino/config/sync/language.entity.ru.yml
@@ -6,7 +6,7 @@ dependencies:
     - webcomposer_language_hierarchy
 third_party_settings:
   webcomposer_language_hierarchy:
-    webcomposer_fallback_langcode: ''
+    webcomposer_fallback_langcode: en
     webcomposer_language_hidden: 0
 id: ru
 label: 'Russian (Kazakhstan)'
