PACIFIC-1453 adjust fields to be translatable and set default val

--- a/web/sites/zipang-casino/config/sync/field.field.taxonomy_term.all_games_category.field_thumbnail_size.yml
+++ b/web/sites/zipang-casino/config/sync/field.field.taxonomy_term.all_games_category.field_thumbnail_size.yml
@@ -14,8 +14,10 @@ bundle: all_games_category
 label: 'Thumbnail Size'
 description: ''
 required: false
-translatable: false
-default_value: {  }
+translatable: true
+default_value:
+  -
+    value: 150x150
 default_value_callback: ''
 settings: {  }
 field_type: list_string
