--- a/web/sites/zipang-casino/config/sync/field.field.taxonomy_term.all_games_category.field_number_of_rows.yml
+++ b/web/sites/zipang-casino/config/sync/field.field.taxonomy_term.all_games_category.field_number_of_rows.yml
@@ -14,8 +14,10 @@ bundle: all_games_category
 label: 'Number of Rows'
 description: ''
 required: false
-translatable: false
-default_value: {  }
+translatable: true
+default_value:
+  -
+    value: '0'
 default_value_callback: ''
 settings: {  }
 field_type: list_string
