WEBSITE-5699-Adding-Russian ow-sports and dafa-sports

--- a/web/sites/dafa-sports/config/sync/language.entity.ru.yml
+++ b/web/sites/dafa-sports/config/sync/language.entity.ru.yml
@@ -10,7 +10,7 @@ third_party_settings:
     webcomposer_language_custom_label: 'Russian (Kazakhstan)'
     webcomposer_language_hidden: 0
 id: ru
-label: Russian
+label: 'Russian (Kazakhstan)'
 direction: ltr
 weight: 16
 locked: false
