ATLANTIC-1133: added esports configuration to the header config, added exported esports yml config files from stg.

--- a/web/sites/mobile-nextbet/config/sync/webcomposer_config.header_configuration.yml
+++ b/web/sites/mobile-nextbet/config/sync/webcomposer_config.header_configuration.yml
@@ -58,6 +58,8 @@ links_title: Quicklinks
 mobile_slot_title: 'Nextbet now offers the most secure mobile Slots in Asia!'
 mobile_live_dealer_title: 'Play Live Dealer mobile at Nextbet!'
 mobile_arcade_title: 'Play your favorite mobile Arcade games with Nextbet!'
+mobile_esports_title: 'Play your favorite mobile Arcade games with Nextbet!'
 logo_title_slots: 'Mobile Slots'
 logo_title_live_dealer: 'Mobile Live Dealer'
 logo_title_arcade: 'Mobile Arcade'
+logo_title_esports: 'Mobile Esports'
