--- a/web/sites/zipang-casino/config/sync/core.entity_form_display.taxonomy_term.all_games_category.default.yml
+++ b/web/sites/zipang-casino/config/sync/core.entity_form_display.taxonomy_term.all_games_category.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.taxonomy_term.all_games_category.field_category_icon
+    - field.field.taxonomy_term.all_games_category.field_category_log_in_state
     - field.field.taxonomy_term.all_games_category.field_category_url
     - field.field.taxonomy_term.all_games_category.field_icon
     - field.field.taxonomy_term.all_games_category.field_log_in_state
@@ -24,7 +25,7 @@ third_party_settings:
         - field_category_icon
         - field_slug
       parent_name: ''
-      weight: 5
+      weight: 6
       format_type: fieldset
       format_settings:
         id: ''
@@ -37,7 +38,7 @@ third_party_settings:
         - field_thumbnail_size
         - field_number_of_rows
       parent_name: ''
-      weight: 6
+      weight: 7
       format_type: fieldset
       format_settings:
         id: ''
@@ -66,8 +67,14 @@ content:
     third_party_settings: {  }
     type: image_image
     region: content
+  field_category_log_in_state:
+    weight: 5
+    settings: {  }
+    third_party_settings: {  }
+    type: options_buttons
+    region: content
   field_category_url:
-    weight: 7
+    weight: 8
     settings:
       placeholder_url: ''
       placeholder_title: ''
