--- a/web/sites/zipang-casino/config/sync/core.entity_view_display.taxonomy_term.all_games_category.default.yml
+++ b/web/sites/zipang-casino/config/sync/core.entity_view_display.taxonomy_term.all_games_category.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.taxonomy_term.all_games_category.field_category_icon
+    - field.field.taxonomy_term.all_games_category.field_category_log_in_state
     - field.field.taxonomy_term.all_games_category.field_category_url
     - field.field.taxonomy_term.all_games_category.field_icon
     - field.field.taxonomy_term.all_games_category.field_log_in_state
@@ -41,8 +42,15 @@ content:
     third_party_settings: {  }
     type: image
     region: content
+  field_category_log_in_state:
+    weight: 3
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
   field_category_url:
-    weight: 6
+    weight: 7
     label: above
     settings:
       trim_length: 80
@@ -61,14 +69,14 @@ content:
     type: list_default
     region: content
   field_number_of_rows:
-    weight: 5
+    weight: 6
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
   field_slug:
-    weight: 3
+    weight: 4
     label: above
     settings:
       link_to_entity: false
@@ -76,7 +84,7 @@ content:
     type: string
     region: content
   field_thumbnail_size:
-    weight: 4
+    weight: 5
     label: above
     settings: {  }
     third_party_settings: {  }
