--- a/web/sites/zipang-casino/config/sync/views.view.all_games_categories.yml
+++ b/web/sites/zipang-casino/config/sync/views.view.all_games_categories.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.taxonomy_term.field_category_icon
+    - field.storage.taxonomy_term.field_category_log_in_state
     - field.storage.taxonomy_term.field_category_url
     - field.storage.taxonomy_term.field_icon
     - field.storage.taxonomy_term.field_log_in_state
@@ -610,6 +611,68 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
+        field_category_log_in_state:
+          id: field_category_log_in_state
+          table: taxonomy_term__field_category_log_in_state
+          field: field_category_log_in_state
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: list_default
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 2
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
       filters:
         vid:
           id: vid
@@ -722,6 +785,7 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.taxonomy_term.field_category_icon'
+        - 'config:field.storage.taxonomy_term.field_category_log_in_state'
         - 'config:field.storage.taxonomy_term.field_category_url'
         - 'config:field.storage.taxonomy_term.field_icon'
         - 'config:field.storage.taxonomy_term.field_log_in_state'
@@ -783,6 +847,7 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.taxonomy_term.field_category_icon'
+        - 'config:field.storage.taxonomy_term.field_category_log_in_state'
         - 'config:field.storage.taxonomy_term.field_category_url'
         - 'config:field.storage.taxonomy_term.field_icon'
         - 'config:field.storage.taxonomy_term.field_log_in_state'
