--- a/web/sites/mobile-msw/config/sync/core.entity_form_display.node.promotion.default.yml
+++ b/web/sites/mobile-msw/config/sync/core.entity_form_display.node.promotion.default.yml
@@ -6,6 +6,8 @@ dependencies:
     - field.field.node.promotion.field_banner_image
     - field.field.node.promotion.field_promo_description
     - field.field.node.promotion.field_promo_mechanics
+    - field.field.node.promotion.field_show_on_mobile_site
+    - field.field.node.promotion.field_show_on_the_maya_mini_app
     - field.field.node.promotion.field_terms_conditions
     - image.style.thumbnail
     - node.type.promotion
@@ -21,7 +23,7 @@ third_party_settings:
       children:
         - field_banner_image
       parent_name: ''
-      weight: 4
+      weight: 3
       format_type: details
       format_settings:
         id: ''
@@ -42,6 +44,19 @@ third_party_settings:
         id: ''
         classes: ''
       label: 'Promotion URL'
+    group_promotion_visibility:
+      children:
+        - field_show_on_the_maya_mini_app
+        - field_show_on_mobile_site
+      parent_name: ''
+      weight: 13
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: 'Promotion Visibility Settings'
 id: node.promotion.default
 targetEntityType: node
 bundle: promotion
@@ -49,7 +64,7 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -62,7 +77,7 @@ content:
     type: image_image
     region: content
   field_promo_description:
-    weight: 3
+    weight: 2
     settings:
       rows: 5
       placeholder: ''
@@ -70,7 +85,7 @@ content:
     type: text_textarea
     region: content
   field_promo_mechanics:
-    weight: 5
+    weight: 4
     settings:
       rows: 9
       summary_rows: 3
@@ -78,8 +93,22 @@ content:
     third_party_settings: {  }
     type: text_textarea_with_summary
     region: content
+  field_show_on_mobile_site:
+    weight: 16
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
+  field_show_on_the_maya_mini_app:
+    weight: 15
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
   field_terms_conditions:
-    weight: 6
+    weight: 5
     settings:
       rows: 9
       summary_rows: 3
@@ -89,18 +118,18 @@ content:
     region: content
   path:
     type: path
-    weight: 11
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
   publish_on:
     type: datetime_timestamp_no_default
-    weight: 8
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
   scheduler_settings:
-    weight: 7
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -113,7 +142,7 @@ content:
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 13
+    weight: 12
     region: content
     settings:
       display_label: true
@@ -128,7 +157,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 12
+    weight: 11
     settings:
       match_operator: CONTAINS
       size: 60
@@ -137,11 +166,12 @@ content:
     third_party_settings: {  }
   unpublish_on:
     type: datetime_timestamp_no_default
-    weight: 9
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
   langcode: true
   promote: true
+  status: true
   translation: true
