--- a/web/sites/mobile-msw/config/sync/core.entity_view_display.node.promotion.default.yml
+++ b/web/sites/mobile-msw/config/sync/core.entity_view_display.node.promotion.default.yml
@@ -6,6 +6,8 @@ dependencies:
     - field.field.node.promotion.field_banner_image
     - field.field.node.promotion.field_promo_description
     - field.field.node.promotion.field_promo_mechanics
+    - field.field.node.promotion.field_show_on_mobile_site
+    - field.field.node.promotion.field_show_on_the_maya_mini_app
     - field.field.node.promotion.field_terms_conditions
     - node.type.promotion
   module:
@@ -39,6 +41,26 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: text_default
+    region: content
+  field_show_on_mobile_site:
+    weight: 7
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
+    region: content
+  field_show_on_the_maya_mini_app:
+    weight: 6
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
     region: content
   field_terms_conditions:
     weight: 5
