--- a/web/sites/mobile-msw/config/sync/core.entity_form_display.node.promotion.default.yml
+++ b/web/sites/mobile-msw/config/sync/core.entity_form_display.node.promotion.default.yml
@@ -32,8 +32,7 @@ third_party_settings:
         required_fields: true
       label: 'Promotion Banner'
     group_summary:
-      children:
-        - field_url_slug
+      children: {  }
       parent_name: ''
       weight: 1
       format_type: details
@@ -132,13 +131,6 @@ content:
     weight: 6
     region: content
     settings: {  }
-    third_party_settings: {  }
-  status:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 14
-    region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
