--- a/web/sites/zipang-casino/config/sync/views.view.game_list_v4.yml
+++ b/web/sites/zipang-casino/config/sync/views.view.game_list_v4.yml
@@ -1823,6 +1823,15 @@ display:
             field_client_type_mobile_export:
               alias: client_type_mobile
               raw_output: false
+            field_rtp:
+              alias: ''
+              raw_output: false
+            field_bet_range:
+              alias: ''
+              raw_output: false
+            field_provider_product_export:
+              alias: provider_product
+              raw_output: false
       pager:
         type: full
         options:
@@ -2939,6 +2948,73 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
+        field_provider_product_export:
+          id: field_provider_product_export
+          table: zipang_desktop_games_entity__field_provider_product
+          field: field_provider_product_export
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: entity_reference_export
+          settings:
+            view_mode: default
+            extra:
+              id: 0
+              title: 0
+              url: 0
+              type: 0
+              bundle: 0
+          group_column: target_id
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          field_api_classes: 0
+          plugin_id: field_export
       sorts:
         weight:
           id: weight
@@ -2987,6 +3063,7 @@ display:
         - 'config:field.storage.zipang_desktop_games_entity.field_game_tag'
         - 'config:field.storage.zipang_desktop_games_entity.field_game_thumbnail'
         - 'config:field.storage.zipang_desktop_games_entity.field_game_title'
+        - 'config:field.storage.zipang_desktop_games_entity.field_provider_product'
         - 'config:field.storage.zipang_desktop_games_entity.field_rtp'
   rest_export_2:
     display_plugin: rest_export
