--- a/web/sites/mobile-nextbet/config/sync/core.extension.yml
+++ b/web/sites/mobile-nextbet/config/sync/core.extension.yml
@@ -121,6 +121,7 @@ module:
   webcomposer_territory_blocking: 0
   webcomposer_token: 0
   webcomposer_webform: 0
+  webcomposer_social_media: 0
   webform: 0
   webform_rest: 0
   webform_ui: 0
