WEBSITE-6199 Partners should be sortable per language.

--- a/web/sites/mobile-entrypage/config/sync/views.view.webcomposer_responsive_partner_entity_api.yml
+++ b/web/sites/mobile-entrypage/config/sync/views.view.webcomposer_responsive_partner_entity_api.yml
@@ -4,10 +4,12 @@ status: true
 dependencies:
   config:
     - block.block.languagedropdownswitcher_2
+    - system.menu.admin
   module:
     - draggableviews
     - rest
     - serialization
+    - user
     - webcomposer_partner_responsive
 _core:
   default_config_hash: o9mWA7adO5n-Cc7mEfrbzjYWP_kmSkZZh3FKNEKj6zI
@@ -51,23 +53,9 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
-        type: mini
+        type: none
         options:
-          items_per_page: 10
           offset: 0
-          id: 0
-          total_pages: null
-          expose:
-            items_per_page: false
-            items_per_page_label: 'Items per page'
-            items_per_page_options: '5, 10, 25, 50'
-            items_per_page_options_all: false
-            items_per_page_options_all_label: '- All -'
-            offset: false
-            offset_label: Offset
-          tags:
-            previous: ‹‹
-            next: ››
       style:
         type: serializer
       row:
@@ -168,7 +156,6 @@ display:
         - 'languages:language_content'
         - 'languages:language_interface'
         - request_format
-        - url.query_args
       tags: {  }
   page_1:
     display_plugin: page
@@ -353,6 +340,11 @@ display:
         style: false
         row: false
         header: false
+        access: false
+        title: false
+        cache: false
+        filters: false
+        filter_groups: false
       style:
         type: table
         options:
@@ -409,12 +401,74 @@ display:
           view_mode: default
           bypass_access: false
           plugin_id: entity
+      access:
+        type: perm
+        options:
+          perm: 'access content'
+      menu:
+        type: normal
+        title: 'Responsive Partner Sorting'
+        description: 'Sorting of Partners'
+        expanded: false
+        parent: entity.partner_responsive_entity.manage
+        weight: 0
+        context: '0'
+        menu_name: admin
+      title: 'Footer Partners Sorting'
+      cache:
+        type: none
+        options: {  }
+      filters:
+        langcode:
+          id: langcode
+          table: partner_responsive_entity_field_data
+          field: langcode
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: in
+          value:
+            '***LANGUAGE_language_interface***': '***LANGUAGE_language_interface***'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: partner_responsive_entity
+          entity_field: langcode
+          plugin_id: language
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
     cache_metadata:
       max-age: 0
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-        - url.query_args
+        - user.permissions
       tags: {  }
   rest_export_1:
     display_plugin: rest_export
@@ -425,19 +479,65 @@ display:
       display_extenders: {  }
       path: api/partner_mobile
       pager:
-        type: some
+        type: none
         options:
-          items_per_page: 10
           offset: 0
       style:
         type: serializer
         options:
-          grouping: {  }
           uses_fields: false
           formats: {  }
       row:
         type: data_entity
         options: {  }
+      filters:
+        langcode:
+          id: langcode
+          table: partner_responsive_entity_field_data
+          field: langcode
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: in
+          value:
+            '***LANGUAGE_language_interface***': '***LANGUAGE_language_interface***'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: partner_responsive_entity
+          entity_field: langcode
+          plugin_id: language
+      defaults:
+        filters: false
+        filter_groups: false
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
     cache_metadata:
       max-age: -1
       contexts:
